[fix] change defaultCollapsed

--- a/src/Card.less
+++ b/src/Card.less
@@ -102,7 +102,8 @@
   }
   &-content {
     padding: 24px;
-    overflow: hidden;
+    //overflow: hidden;
+    overflow-y: scroll;
     transition: all .3s ease-out;
     &-none-padding {
       padding: 0;
